--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "template-webpack-babel",
   "description": "2017 Basic Web dev template for newbee, and readers of hugojing/web-lessons.",
   "homepage": "https://github.com/hugojing/template-webpack-babel",
-  "version": "0.6.0",
+  "version": "0.7.2",
   "author": {
     "name": "hugojing",
     "email": "toloric@163.com",
     "url": "https://changshiban.com"
   },
   "scripts": {
-    "dist": "rm -rf ./dist && mkdir ./dist && webpack --config build.js"
+    "dev": "webpack-dev-server --inline --config ./build/dev",
+    "dist": "rm -rf ./dist && mkdir ./dist && webpack --config ./build/prod"
   },
   "license": "MIT",
   "devDependencies": {
@@ -18,7 +19,6 @@
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-3": "^6.22.0",
-    "connect-history-api-fallback": "^1.3.0",
     "cross-env": "^3.2.3",
     "css-loader": "^0.27.2",
     "extract-text-webpack-plugin": "^2.1.0",
@@ -26,12 +26,14 @@
     "html-webpack-plugin": "^2.28.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "style-loader": "^0.13.2",
+    "uglifyjs-webpack-plugin": "^0.3.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack-dev-server": "^2.4.2",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "normalize.css": "^5.0.0"
   },
   "engines": {
