--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "template-webpack-babel",
   "description": "2017 Basic Web dev template for newbee, and readers of hugojing/web-lessons.",
   "homepage": "https://github.com/hugojing/template-webpack-babel",
-  "version": "0.7.2",
+  "version": "1.0.0",
   "author": {
     "name": "hugojing",
     "email": "toloric@163.com",
@@ -27,6 +27,7 @@
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "style-loader": "^0.13.2",
     "uglifyjs-webpack-plugin": "^0.3.1",
+    "uglify-js": "^2.8.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2",
